# photo-sorter-v3

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  DEVELOPMENT.md  LICENSE  README.id.md  README.md  SECURITY.md  clippy.toml  dev.ps1  implementation_plan.md  index.html  install.command  package-lock.json  package.json  pyproject.toml  pyright_output.txt  readme.txt  requirements.txt  run.bat  run.command  rustfmt.toml  settings.json  setup.ps1  sorter.py  v2-vs-v3-comparison.md  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  checkpoint.md  development.md  index.html  installation.md  keyboard_shortcuts.md  walkthrough.md
docs/id/: README.md  faq.md  install.md
packaging/: build_windows.py  photo_sorter_setup.iss  version_info.txt
photosorter/: __init__.py  controller.py  database.py  exif.py  logging_setup.py  main.py  project.py  ui.py  utils.py  widgets.py  workers.py
scripts/: install.bat  install.sh  run.sh  setup.sh
src/: app.ts  cache.ts  constants.ts  filmstrip.ts  gamepad.ts  main.py  style.css  viewer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  database.rs  exif.rs  export.rs  filter.rs  gamepad.rs  image_loader.rs  lib.rs  main.rs  state.rs  undo.rs  xmp.rs
tests/: conftest.py  test_database.py  test_exif.py  test_project.py  test_utils.py  test_workers.py
