[package]
name = "photo-sorter-v3"
version = "3.0.0"
description = "Fast, distraction-free photo culling tool in Rust"
authors = ["Blanc & Violet"]
edition = "2021"

[lib]
name = "photo_sorter_v3"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = ["image-ico"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
kamadak-exif = "0.5.5"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.10.0"
trash = "5.1.1"
gilrs = { version = "0.10.2", optional = true }
chrono = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[features]
default = []
gamepad = ["dep:gilrs"]
