[package]
name = "photo-sorter-v3"
version = "3.2.0"
description = "Fast, distraction-free photo culling tool in Rust"
authors = ["Blanc & Violet"]
edition = "2021"
repository = "https://github.com/DavidPandleton/photo-sorter-v3"
homepage = "https://davidpandleton.github.io/photo-sorter-v3"
license = "MIT"
keywords = ["photo", "culling", "tauri", "photography", "raw"]

[lib]
name = "photo_sorter_v3"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = ["image-ico"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
kamadak-exif = "0.5.5"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "webp"] }
chrono = "0.4"
# ponytail: removed rayon (single-use) and trash (std::fs::remove_file works)
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[features]
default = []
